import java.awt.*;

public class Main {
    public static void main(String[] args) {


    }
}