@startuml
class Main
Main <|-- ProgramControl
ProgramControl *-- StartMenu
ProgramControl *-- MainMenu
ProgramControl *-- User
ProgramControl *-- DataHandling
DataHandling *-- FileHandling
DataHandling *-- DatabaseHandling
MainMenu *-- Search
Search *-- AMedia
AMedia <|-- Movie
AMedia <|-- Series

interface DataHandling{
ArrayList<AMedia> readFromMovieFile(String path)
    ArrayList<AMedia> readFromSeriesFile(String path)
    ArrayList<User> readFromUserFile(String path, ArrayList<AMedia> allMedia)
    void writeToUserFile(String path, ArrayList<User> allUsers)
    ArrayList<String> readFromCategoryFile(String path)
    }

class DatabaseHandling

class Search{
- Scanner scanner
- ArrayList<AMedia> allMovies
- ArrayList<AMedia> allSeries
- ArrayList<String> allCategories
+ Search(ArrayList<AMedia> allMovies, ArrayList<AMedia> allSeries, ArrayList<String> allCategories)
+ void searchEngine()
+ void searchBySavedMedia()
+ void searchByWatchedMedia()
}
class ProgramControl{
- ArrayList<User> allUsers
- ArrayList<AMedia> allMedia
+ static MainMenu mainMenu
+ static User currentUser
+ void runProgram()
}

class StartMenu{
- Scanner scanner
- ArrayList<User> allUsers
+ StartMenu(ArrayList<User> allUsers)
+ User runStartMenu()
- User login()
- User createNewUser()
}

class MainMenu{
- Search search
- ArrayList<User> allUsers
- ArrayList<AMedia> allMovies
- ArrayList<AMedia> allSeries
- ArrayList<String> allCategories
- Random rnd
- Scanner scanner
+ MainMenu(ArrayList<User> allUsers, ArrayList<AMedia> allMovies, ArrayList<AMedia> allSeries)
+ void runMainMenu()
- void suggestedMedia()
- void logOut()
- void userOptions()
}

abstract class AMedia{
- String name
- String category
- float rating
- int releaseYear
- Scanner sc
+ AMedia(String name, String category, float rating, int releaseYear)
# abstract void playMedia(AMedia media)
+ void chooseMedia()
+ String getName()
+ String getCategory()
+ float getRating()
+ int getReleaseYear()
}

class Movie{
+ Movie (String name, String category, float rating, int releaseYear)
+ void playMedia()
}

class Series{
- int season
- int episode
- int endYear
+ Series (String name, String category, float rating, int releaseYear, int season, int episode, int endYear)
+ void playMedia()
}

class User{
- String userName
- String password
- int age
- ArrayList<AMedia> watchedMedia
- ArrayList<AMedia> savedMedia
+ User(String userName, String password, int age, ArrayList<AMedia>(), ArrayList<AMedia>())
+ String getUsername()
+ void setUsername()
+ String getPassword()
+ void setPassword()
+ int getAge()
+ ArrayList<AMedia> getWatchedMedia()
+ ArrayList<AMedia> getSavedMedia()
+ void addSavedMedia(AMedia)
+ void removeSavedMedia(AMedia)
+ void addWatchedMedia(AMedia)
}

class FileHandling{
+ static ArrayList<String> readFromCategoryFile(string path)
+ static ArrayList<AMedia> readFromMovieFile(String path)
+ static ArrayList<AMedia> readFromSeriesFile(String path)
+ static ArrayList<User> readFromUserFile(String path, ArrayList<AMedia> allMedia)
+ static void writeToUserFile(String path, ArrayList<User> allUsers)
}

@enduml